--- a/drupal/config/sync/views.view.anasayfa_slider.yml
+++ b/drupal/config/sync/views.view.anasayfa_slider.yml
@@ -3,6 +3,7 @@ langcode: tr
 status: true
 dependencies:
   config:
+    - field.storage.node.body
     - field.storage.node.field_anasayfa_slider_gorseli
     - field.storage.node.field_baglanti_adresi
     - image.style.anasayfa_slider_1920x600
@@ -12,6 +13,7 @@ dependencies:
     - image
     - link
     - node
+    - text
     - user
 id: anasayfa_slider
 label: 'Anasayfa Slider'
@@ -68,69 +70,6 @@ display:
       row:
         type: fields
       fields:
-        title:
-          id: title
-          table: node_field_data
-          field: title
-          relationship: none
-          group_type: group
-          admin_label: ''
-          label: ''
-          exclude: true
-          alter:
-            alter_text: false
-            text: ''
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: false
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          click_sort_column: value
-          type: string
-          settings:
-            link_to_entity: false
-          group_column: value
-          group_columns: {  }
-          group_rows: true
-          delta_limit: 0
-          delta_offset: 0
-          delta_reversed: false
-          delta_first_last: false
-          multi_type: separator
-          separator: ', '
-          field_api_classes: false
-          plugin_id: field
         field_anasayfa_slider_gorseli:
           id: field_anasayfa_slider_gorseli
           table: node__field_anasayfa_slider_gorseli
@@ -262,6 +201,68 @@ display:
           separator: ', '
           field_api_classes: false
           plugin_id: field
+        body:
+          id: body
+          table: node__body
+          field: body
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: true
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: text_default
+          settings: {  }
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          plugin_id: field
         nid:
           id: nid
           table: node_field_data
@@ -273,7 +274,7 @@ display:
           exclude: false
           alter:
             alter_text: true
-            text: "<div id=\"anasayfa-slider\">\r\n<div id=\"anasayfa-slider-gorsel\">{{ field_anasayfa_slider_gorseli }}</div>\r\n<div id=\"anasayfa-slider-yazi\">\r\n<div id=\"anasayfa-slider-baslik\"><h1>{{ title }}</h1></div>\r\n</div>\r\n</div>"
+            text: "<div id=\"anasayfa-slider\">\r\n<div id=\"anasayfa-slider-gorsel\">{{ field_anasayfa_slider_gorseli }}</div>\r\n<div id=\"anasayfa-slider-yazi\">\r\n<div id=\"anasayfa-slider-baslik\"><h1>{{ body }}</h1></div>\r\n</div>\r\n</div>"
             make_link: false
             path: ''
             absolute: false
@@ -385,6 +386,7 @@ display:
         - 'user.node_grants:view'
         - user.permissions
       tags:
+        - 'config:field.storage.node.body'
         - 'config:field.storage.node.field_anasayfa_slider_gorseli'
         - 'config:field.storage.node.field_baglanti_adresi'
   block_1:
@@ -402,5 +404,6 @@ display:
         - 'user.node_grants:view'
         - user.permissions
       tags:
+        - 'config:field.storage.node.body'
         - 'config:field.storage.node.field_anasayfa_slider_gorseli'
         - 'config:field.storage.node.field_baglanti_adresi'
