--- a/drupal/config/sync/block.block.insaatvemadencilik.yml
+++ b/drupal/config/sync/block.block.insaatvemadencilik.yml
@@ -1,23 +1,23 @@
-uuid: da322bac-8cda-4fdb-a420-536063f005c4
+uuid: 069063ad-3166-4f00-bf6b-100cf124f4f4
 langcode: tr
 status: true
 dependencies:
   content:
-    - 'block_content:basic:053fe9f7-a910-4857-95a8-12e372286997'
+    - 'block_content:basic:865428e5-c27e-43e8-8397-40d2d6f4de15'
   module:
     - block_content
     - system
   theme:
     - conference_lite
-id: iletisimadresleri
+id: insaatvemadencilik
 theme: conference_lite
 region: content
-weight: -4
+weight: -12
 provider: null
-plugin: 'block_content:053fe9f7-a910-4857-95a8-12e372286997'
+plugin: 'block_content:865428e5-c27e-43e8-8397-40d2d6f4de15'
 settings:
-  id: 'block_content:053fe9f7-a910-4857-95a8-12e372286997'
-  label: 'İletişim Adresleri'
+  id: 'block_content:865428e5-c27e-43e8-8397-40d2d6f4de15'
+  label: 'İnşaat ve Madencilik Blok'
   provider: block_content
   label_display: '0'
   status: true
@@ -26,6 +26,6 @@ settings:
 visibility:
   request_path:
     id: request_path
-    pages: /iletisim
+    pages: /faaliyet-alanlari-ve-sirketler/insaat-ve-madencilik
     negate: false
     context_mapping: {  }
