--- a/drupal/config/sync/block.block.otomotiveblok.yml
+++ b/drupal/config/sync/block.block.otomotiveblok.yml
@@ -1,23 +1,23 @@
-uuid: da322bac-8cda-4fdb-a420-536063f005c4
+uuid: 3feefb1c-c8bc-4b47-909b-1f36428de583
 langcode: tr
 status: true
 dependencies:
   content:
-    - 'block_content:basic:053fe9f7-a910-4857-95a8-12e372286997'
+    - 'block_content:basic:85cf7357-4c3f-465e-b925-8e5669bf75fc'
   module:
     - block_content
     - system
   theme:
     - conference_lite
-id: iletisimadresleri
+id: otomotiveblok
 theme: conference_lite
 region: content
-weight: -4
+weight: -14
 provider: null
-plugin: 'block_content:053fe9f7-a910-4857-95a8-12e372286997'
+plugin: 'block_content:85cf7357-4c3f-465e-b925-8e5669bf75fc'
 settings:
-  id: 'block_content:053fe9f7-a910-4857-95a8-12e372286997'
-  label: 'İletişim Adresleri'
+  id: 'block_content:85cf7357-4c3f-465e-b925-8e5669bf75fc'
+  label: 'Otomotive Blok'
   provider: block_content
   label_display: '0'
   status: true
@@ -26,6 +26,6 @@ settings:
 visibility:
   request_path:
     id: request_path
-    pages: /iletisim
+    pages: /faaliyet-alanlari-ve-sirketler/otomotiv
     negate: false
     context_mapping: {  }
