--- a/drupal/config/sync/block.block.saglikblok.yml
+++ b/drupal/config/sync/block.block.saglikblok.yml
@@ -1,23 +1,23 @@
-uuid: da322bac-8cda-4fdb-a420-536063f005c4
+uuid: b7158118-932d-4f57-961e-bfd94cb50129
 langcode: tr
 status: true
 dependencies:
   content:
-    - 'block_content:basic:053fe9f7-a910-4857-95a8-12e372286997'
+    - 'block_content:basic:6ffdb13a-a52d-487d-90a0-548edd969d82'
   module:
     - block_content
     - system
   theme:
     - conference_lite
-id: iletisimadresleri
+id: saglikblok
 theme: conference_lite
 region: content
-weight: -4
+weight: -13
 provider: null
-plugin: 'block_content:053fe9f7-a910-4857-95a8-12e372286997'
+plugin: 'block_content:6ffdb13a-a52d-487d-90a0-548edd969d82'
 settings:
-  id: 'block_content:053fe9f7-a910-4857-95a8-12e372286997'
-  label: 'İletişim Adresleri'
+  id: 'block_content:6ffdb13a-a52d-487d-90a0-548edd969d82'
+  label: 'Sağlık Blok'
   provider: block_content
   label_display: '0'
   status: true
@@ -26,6 +26,6 @@ settings:
 visibility:
   request_path:
     id: request_path
-    pages: /iletisim
+    pages: /faaliyet-alanlari-ve-sirketler/saglik
     negate: false
     context_mapping: {  }
