--- a/drupal/config/sync/block.block.sigortacilikblok.yml
+++ b/drupal/config/sync/block.block.sigortacilikblok.yml
@@ -1,23 +1,23 @@
-uuid: da322bac-8cda-4fdb-a420-536063f005c4
+uuid: 0b2b9658-10d9-48f8-ac23-c5f9780d483f
 langcode: tr
 status: true
 dependencies:
   content:
-    - 'block_content:basic:053fe9f7-a910-4857-95a8-12e372286997'
+    - 'block_content:basic:6a000270-43a3-446d-9950-73cd7efcb2e1'
   module:
     - block_content
     - system
   theme:
     - conference_lite
-id: iletisimadresleri
+id: sigortacilikblok
 theme: conference_lite
 region: content
-weight: -4
+weight: -11
 provider: null
-plugin: 'block_content:053fe9f7-a910-4857-95a8-12e372286997'
+plugin: 'block_content:6a000270-43a3-446d-9950-73cd7efcb2e1'
 settings:
-  id: 'block_content:053fe9f7-a910-4857-95a8-12e372286997'
-  label: 'İletişim Adresleri'
+  id: 'block_content:6a000270-43a3-446d-9950-73cd7efcb2e1'
+  label: 'Sigortacılık Blok'
   provider: block_content
   label_display: '0'
   status: true
@@ -26,6 +26,6 @@ settings:
 visibility:
   request_path:
     id: request_path
-    pages: /iletisim
+    pages: /faaliyet-alanlari-ve-sirketler/sigortacilik
     negate: false
     context_mapping: {  }
