--- a/drupal/config/sync/views.view.cozum_ortaklarimiz.yml
+++ b/drupal/config/sync/views.view.cozum_ortaklarimiz.yml
@@ -150,21 +150,18 @@ display:
             operator_limit_selection: false
             operator_list: {  }
       sorts:
-        created:
-          id: created
-          table: node_field_data
-          field: created
-          order: DESC
-          entity_type: node
-          entity_field: created
-          plugin_id: date
+        field_siralama_value:
+          id: field_siralama_value
+          table: node__field_siralama
+          field: field_siralama_value
           relationship: none
           group_type: group
           admin_label: ''
+          order: ASC
           exposed: false
           expose:
             label: ''
-          granularity: second
+          plugin_id: standard
       title: 'Çözüm Ortaklarımız'
       header: {  }
       footer: {  }
