--- a/drupal/config/sync/views.view.sirketler.yml
+++ b/drupal/config/sync/views.view.sirketler.yml
@@ -22,6 +22,7 @@ dependencies:
     - image
     - node
     - taxonomy
+    - text
     - user
 id: sirketler
 label: Şirketler
@@ -267,6 +268,70 @@ display:
           entity_type: node
           entity_field: nid
           plugin_id: field
+        description__value:
+          id: description__value
+          table: taxonomy_term_field_data
+          field: description__value
+          relationship: field_faaliyet_alani
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: true
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: text_default
+          settings: {  }
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          entity_type: taxonomy_term
+          entity_field: description
+          plugin_id: field
       filters:
         status:
           value: '1'
@@ -358,7 +423,16 @@ display:
       header: {  }
       footer: {  }
       empty: {  }
-      relationships: {  }
+      relationships:
+        field_faaliyet_alani:
+          id: field_faaliyet_alani
+          table: node__field_faaliyet_alani
+          field: field_faaliyet_alani
+          relationship: none
+          group_type: group
+          admin_label: 'field_faaliyet_alani: Taxonomy term'
+          required: false
+          plugin_id: standard
       arguments: {  }
       display_extenders: {  }
     cache_metadata:
@@ -810,7 +884,7 @@ display:
   page_5:
     display_plugin: page
     id: page_5
-    display_title: 'Yatırım ve Finansman Sayfa'
+    display_title: 'Yatırım, Finansman Hizmetleri ve İş Geliştirme Sayfa'
     position: 1
     display_options:
       display_extenders: {  }
@@ -905,7 +979,7 @@ display:
         operator: AND
         groups:
           1: AND
-      title: 'Yatırım ve Finansman'
+      title: 'Yatırım, Finansman Hizmetleri ve İş Geliştirme'
     cache_metadata:
       max-age: -1
       contexts:
