--- a/drupal/config/sync/core.entity_form_display.node.sirket.default.yml
+++ b/drupal/config/sync/core.entity_form_display.node.sirket.default.yml
@@ -7,9 +7,11 @@ dependencies:
     - field.field.node.sirket.field_baglanti_adresi
     - field.field.node.sirket.field_faaliyet_alani
     - field.field.node.sirket.field_sirket_logosu
+    - field.field.node.sirket.field_sirket_pdf
     - image.style.thumbnail
     - node.type.sirket
   module:
+    - file
     - image
     - link
     - path
@@ -60,6 +62,13 @@ content:
       preview_image_style: thumbnail
     third_party_settings: {  }
     type: image_image
+    region: content
+  field_sirket_pdf:
+    weight: 27
+    settings:
+      progress_indicator: throbber
+    third_party_settings: {  }
+    type: file_generic
     region: content
   langcode:
     type: language_select
