--- a/drupal/config/sync/core.entity_view_display.node.sirket.default.yml
+++ b/drupal/config/sync/core.entity_view_display.node.sirket.default.yml
@@ -7,8 +7,10 @@ dependencies:
     - field.field.node.sirket.field_baglanti_adresi
     - field.field.node.sirket.field_faaliyet_alani
     - field.field.node.sirket.field_sirket_logosu
+    - field.field.node.sirket.field_sirket_pdf
     - node.type.sirket
   module:
+    - file
     - image
     - link
     - text
@@ -53,6 +55,14 @@ content:
       image_link: ''
     third_party_settings: {  }
     type: image
+    region: content
+  field_sirket_pdf:
+    weight: 5
+    label: above
+    settings:
+      use_description_as_link_text: true
+    third_party_settings: {  }
+    type: file_default
     region: content
   links:
     weight: 0
