--- a/drupal/config/sync/editor.editor.full_html.yml
+++ b/drupal/config/sync/editor.editor.full_html.yml
@@ -40,6 +40,7 @@ settings:
           items:
             - Blockquote
             - DrupalImage
+            - DrupalMediaLibrary
             - Table
             - HorizontalRule
         -
