--- a/drupal/config/sync/views.view.archive.yml
+++ b/drupal/config/sync/views.view.archive.yml
@@ -226,7 +226,7 @@ display:
       tags: {  }
   page_1:
     id: page_1
-    display_title: Sayfa
+    display_title: Page
     display_plugin: page
     position: 2
     display_options:
