--- a/drupal/config/sync/views.view.comment.yml
+++ b/drupal/config/sync/views.view.comment.yml
@@ -323,7 +323,7 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          label: Yazar
+          label: Author
           exclude: false
           alter:
             alter_text: false
@@ -452,7 +452,7 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          label: Güncellendi
+          label: Updated
           exclude: false
           alter:
             alter_text: false
@@ -1276,7 +1276,7 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          label: Yazar
+          label: Author
           exclude: false
           alter:
             alter_text: false
@@ -1405,7 +1405,7 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          label: Güncellendi
+          label: Updated
           exclude: false
           alter:
             alter_text: false
