--- a/drupal/config/sync/views.view.content.yml
+++ b/drupal/config/sync/views.view.content.yml
@@ -28,7 +28,7 @@ display:
       exposed_form:
         type: basic
         options:
-          submit_button: Süzgeç
+          submit_button: Filter
           reset_button: true
           reset_button_label: Reset
           exposed_sorts_label: 'Sort by'
@@ -40,8 +40,8 @@ display:
         options:
           items_per_page: 50
           tags:
-            previous: '‹ Önceki'
-            next: 'Sonraki ›'
+            previous: '‹ Previous'
+            next: 'Next ›'
             first: '« First'
             last: 'Last »'
       style:
@@ -246,7 +246,7 @@ display:
           table: users_field_data
           field: name
           relationship: uid
-          label: Yazar
+          label: Author
           exclude: false
           alter:
             alter_text: false
@@ -264,7 +264,7 @@ display:
           id: status
           table: node_field_data
           field: status
-          label: Durum
+          label: Status
           exclude: false
           alter:
             alter_text: false
@@ -277,8 +277,8 @@ display:
           type: boolean
           settings:
             format: custom
-            format_custom_true: Yayında
-            format_custom_false: 'Yayında değil'
+            format_custom_true: Published
+            format_custom_false: Unpublished
           plugin_id: field
           entity_type: node
           entity_field: status
@@ -286,7 +286,7 @@ display:
           id: changed
           table: node_field_data
           field: changed
-          label: Güncellendi
+          label: Updated
           exclude: false
           alter:
             alter_text: false
@@ -453,7 +453,7 @@ display:
           exposed: true
           expose:
             operator_id: ''
-            label: Durum
+            label: Status
             description: ''
             use_operator: false
             operator: status_op
@@ -467,7 +467,7 @@ display:
             operator_list: {  }
           is_grouped: true
           group_info:
-            label: 'Yayın durumu'
+            label: 'Published status'
             description: ''
             identifier: status
             optional: true
@@ -478,11 +478,11 @@ display:
             default_group_multiple: {  }
             group_items:
               1:
-                title: Yayında
+                title: Published
                 operator: '='
                 value: '1'
               2:
-                title: 'Yayında değil'
+                title: Unpublished
                 operator: '='
                 value: '0'
           plugin_id: boolean
@@ -601,7 +601,7 @@ display:
         weight: -10
       display_extenders: {  }
     display_plugin: page
-    display_title: Sayfa
+    display_title: Page
     id: page_1
     position: 1
     cache_metadata:
