--- a/drupal/config/sync/views.view.files.yml
+++ b/drupal/config/sync/views.view.files.yml
@@ -39,7 +39,7 @@ display:
       exposed_form:
         type: basic
         options:
-          submit_button: Süzgeç
+          submit_button: Filter
           reset_button: false
           reset_button_label: Reset
           exposed_sorts_label: 'Sort by'
@@ -54,8 +54,8 @@ display:
           id: 0
           total_pages: 0
           tags:
-            previous: '‹ Önceki'
-            next: 'Sonraki ›'
+            previous: '‹ Previous'
+            next: 'Next ›'
           expose:
             items_per_page: false
             items_per_page_label: 'Items per page'
@@ -186,7 +186,7 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          label: İsim
+          label: Name
           exclude: false
           alter:
             alter_text: false
@@ -353,7 +353,7 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          label: Durum
+          label: Status
           exclude: false
           alter:
             alter_text: false
@@ -669,7 +669,7 @@ display:
           exposed: true
           expose:
             operator_id: status_op
-            label: Durum
+            label: Status
             description: ''
             use_operator: false
             operator: status_op
@@ -799,8 +799,8 @@ display:
           id: 0
           total_pages: 0
           tags:
-            previous: '‹ Önceki'
-            next: 'Sonraki ›'
+            previous: '‹ Previous'
+            next: 'Next ›'
           expose:
             items_per_page: false
             items_per_page_label: 'Items per page'
