--- a/drupal/config/sync/views.view.glossary.yml
+++ b/drupal/config/sync/views.view.glossary.yml
@@ -123,7 +123,7 @@ display:
           id: name
           table: users_field_data
           field: name
-          label: Yazar
+          label: Author
           relationship: uid
           plugin_id: field
           type: user_name
@@ -433,7 +433,7 @@ display:
       tags: {  }
   page_1:
     id: page_1
-    display_title: Sayfa
+    display_title: Page
     display_plugin: page
     position: 1
     display_options:
