--- a/drupal/config/sync/views.view.taxonomy_term.yml
+++ b/drupal/config/sync/views.view.taxonomy_term.yml
@@ -297,7 +297,7 @@ display:
       tags: {  }
   page_1:
     id: page_1
-    display_title: Sayfa
+    display_title: Page
     display_plugin: page
     position: 1
     display_options:
